Huge bugfix fro determing WIN, DRAW and LOST. Also moved game simulation to seperate class.

--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -46,7 +46,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DecisionMaking\SimpleDecisionMaker.cs" />
     <Compile Include="FieldVisualizer.cs" />
+    <Compile Include="Models\OpponentProfile.cs" />
+    <Compile Include="Models\GameSimulation.cs" />
     <Compile Include="ParameterRandomizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
