Removed precalculated row weights. moved the parameters to a seperate file, and introduced a param interface.

--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -63,7 +63,9 @@
     <Compile Include="DecisionMaking\IDecisionMaker.cs" />
     <Compile Include="DecisionMaking\IMoveGenerator.cs" />
     <Compile Include="Evaluation\IEvaluator.cs" />
+    <Compile Include="Evaluation\IParameters.cs" />
     <Compile Include="Evaluation\SimpleEvaluator.cs" />
+    <Compile Include="Evaluation\SimpleParameters.cs" />
     <Compile Include="Models\Block.cs" />
     <Compile Include="KubismeBot.cs" />
     <Compile Include="Models\Move.cs" />
