--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -48,12 +48,13 @@
   <ItemGroup>
     <Compile Include="DecisionMaking\SimpleDecisionMaker.cs" />
     <Compile Include="FieldVisualizer.cs" />
-    <Compile Include="Models\OpponentProfile.cs" />
+    <Compile Include="Models\DefaultOpponentProfile.cs" />
     <Compile Include="Models\GameSimulation.cs" />
     <Compile Include="ParameterRandomizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimScore.cs" />
+    <Compile Include="SimScores.cs" />
     <Compile Include="SimulationResult.cs" />
     <Compile Include="Simulator.cs" />
   </ItemGroup>
