--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -47,16 +47,20 @@
   <ItemGroup>
     <Compile Include="Communication\ConsolePlatformTest.cs" />
     <Compile Include="Communication\InstructionTest.cs" />
+    <Compile Include="Communication\MoveInstructionTest.cs" />
     <Compile Include="DecisionMaking\BlockPathTest.cs" />
     <Compile Include="DecisionMaking\PerformanceTest.cs" />
     <Compile Include="Deployoment\Deployer.cs" />
     <Compile Include="Deployoment\DeployerTest.cs" />
     <Compile Include="Evaluation\SimpleEvaluatorTest.cs" />
+    <Compile Include="Generation\MoveGeneratorTest.cs" />
     <Compile Include="Genetics\SimpleParametersCollectionTest.cs" />
     <Compile Include="Models\BlockTest.cs" />
     <Compile Include="Models\DecisionMakerTest.cs" />
     <Compile Include="Models\FieldTest.cs" />
-    <Compile Include="Models\MoveGeneratorTest.cs" />
+    <Compile Include="DecisionMaking\MoveGeneratorTest.cs" />
+    <Compile Include="Models\RowTest.cs" />
+    <Compile Include="Opponent\PointsPredictorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
