On a fit results run all results at least once, tweaking sorting on simulation scores.

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Deployoment\DeployerTest.cs" />
     <Compile Include="Evaluation\SimpleEvaluatorTest.cs" />
     <Compile Include="Generation\MoveGeneratorTest.cs" />
+    <Compile Include="Generation\SimScoresTest.cs" />
     <Compile Include="Genetics\SimpleParametersCollectionTest.cs" />
     <Compile Include="Models\BlockTest.cs" />
     <Compile Include="Models\DecisionMakerTest.cs" />
