Introduced a battle based genetics arena.

--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -46,7 +46,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BattleBot.cs" />
+    <Compile Include="BattlePairing.cs" />
+    <Compile Include="BattleSimulation.cs" />
+    <Compile Include="BattleSimulator.cs" />
+    <Compile Include="Conversion\EloTypeConverter.cs" />
     <Compile Include="DecisionMaking\SimpleDecisionMaker.cs" />
+    <Compile Include="Elo.cs" />
+    <Compile Include="EloExtensions.cs" />
     <Compile Include="FieldVisualizer.cs" />
     <Compile Include="Opponent\ComboAddictOpponentProfile.cs" />
     <Compile Include="Opponent\DefaultOpponentProfile.cs" />
@@ -56,8 +63,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SimpleParametersCollection.cs" />
+    <Compile Include="Serialization\SimulationBotCollection.cs" />
     <Compile Include="SimScore.cs" />
     <Compile Include="SimScores.cs" />
+    <Compile Include="BotData.cs" />
     <Compile Include="SimulationResult.cs" />
     <Compile Include="Simulator.cs" />
   </ItemGroup>
