--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Opponent\PointsPredictor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Troschuetz.Random\MT19937Generator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communication\Instruction.Update.Game.NextPiece.cs" />
