--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Communication\input.version0016.txt" />
     <EmbeddedResource Include="Communication\input.version0017.txt" />
+    <Compile Include="BitsTest.cs" />
     <Compile Include="Communication\ConsolePlatformTest.cs" />
     <EmbeddedResource Include="Communication\input.version0018.txt" />
     <Compile Include="Communication\InstructionTest.cs" />
