--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\BlockILeftTest.cs" />
+    <Compile Include="Blocks\BlockITest.cs" />
+    <Compile Include="Blocks\BlockOTest.cs" />
+    <Compile Include="TestData.cs" />
     <EmbeddedResource Include="Communication\input.version0016.txt" />
     <EmbeddedResource Include="Communication\input.version0017.txt" />
     <Compile Include="BitsTest.cs" />
@@ -56,9 +60,11 @@
     <Compile Include="Deployoment\DeployerTest.cs" />
     <Compile Include="Evaluation\SimpleEvaluatorTest.cs" />
     <Compile Include="Evaluation\SimpleParametersTest.cs" />
+    <Compile Include="Generation\MoveGeneratorGetFieldsTest.cs" />
+    <Compile Include="Generation\MoveGeneratorGetMovesTest.cs" />
     <Compile Include="Generation\MoveGeneratorTest.cs" />
     <Compile Include="Genetics\SimpleParametersCollectionTest.cs" />
-    <Compile Include="Models\BlockTest.cs" />
+    <Compile Include="Blocks\BlockTest.cs" />
     <Compile Include="Models\DecisionMakerTest.cs" />
     <Compile Include="Models\FieldTest.cs" />
     <Compile Include="Models\RowTest.cs" />
