--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Blocks\BlockILeftTest.cs" />
     <Compile Include="Blocks\BlockITest.cs" />
     <Compile Include="Blocks\BlockOTest.cs" />
+    <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
     <Compile Include="TestData.cs" />
     <EmbeddedResource Include="Communication\input.version0016.txt" />
     <EmbeddedResource Include="Communication\input.version0017.txt" />
