A dream came true: Path finding for reachable holes.

--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Evaluation\SimpleEvaluator.cs" />
     <Compile Include="Evaluation\SimpleParameters.cs" />
     <Compile Include="Blocks\Block.cs" />
+    <Compile Include="Generation\TempPath.cs" />
     <Compile Include="KubismeBot.cs" />
     <Compile Include="Models\MoveCandiate.cs" />
     <Compile Include="Models\Position.cs" />
