Fixed rotations for blocks with 2 variations (I, S, Z).

--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -40,12 +40,20 @@
     <Compile Include="Bits.cs" />
     <Compile Include="Blocks\BlockI.cs" />
     <Compile Include="Blocks\BlockILeft.cs" />
-    <Compile Include="Blocks\BlockZ.cs" />
-    <Compile Include="Blocks\BlockS.cs" />
+    <Compile Include="Blocks\BlockIRight.cs" />
+    <Compile Include="Blocks\BlockIUturn.cs" />
+    <Compile Include="Blocks\BlockJ.cs" />
     <Compile Include="Blocks\BlockL.cs" />
     <Compile Include="Blocks\BlockO.cs" />
-    <Compile Include="Blocks\BlockJ.cs" />
+    <Compile Include="Blocks\BlockS.cs" />
+    <Compile Include="Blocks\BlockSLeft.cs" />
+    <Compile Include="Blocks\BlockSRight.cs" />
+    <Compile Include="Blocks\BlockSUturn.cs" />
     <Compile Include="Blocks\BlockT.cs" />
+    <Compile Include="Blocks\BlockZ.cs" />
+    <Compile Include="Blocks\BlockZLeft.cs" />
+    <Compile Include="Blocks\BlockZRight.cs" />
+    <Compile Include="Blocks\BlockZUturn.cs" />
     <Compile Include="Communication\BotResponse.cs" />
     <Compile Include="Communication\ActionType.cs" />
     <Compile Include="Communication\IBot.cs" />
