--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\SimulationBotCollection.cs" />
     <Compile Include="BotData.cs" />
+    <Compile Include="SimplifiedDecisionMaker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config.xample" />
