Search for 3 or 2 random blocks for depth 3 and deeper.

--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -82,6 +82,7 @@
     <Compile Include="DecisionMaking\Block1Node.cs" />
     <Compile Include="DecisionMaking\BlockNode.cs" />
     <Compile Include="DecisionMaking\BlockNodes.cs" />
+    <Compile Include="DecisionMaking\BlockNode_.cs" />
     <Compile Include="DecisionMaking\BlockPath.cs" />
     <Compile Include="DecisionMaking\BlockRndNode.cs" />
     <Compile Include="DecisionMaking\BlockRndNodes.cs" />
