Fix for dif in filled rows.

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -105,5 +105,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Communication\input.version0039.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Communication\input.version0040.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
